# 14-apple-watch-health-tracker

./: .gitignore  CLAUDE.md  README.md  create_sample_data.py  pyproject.toml  requirements.txt
.claude/commands/: add-feature.md
.streamlit/: config.toml
analytics/20260703-correlation/: generated_code.py  report.md  report_en.md
data/preprocess/: health_metrics_2026_02.csv  health_metrics_2026_03.csv  health_metrics_2026_04.csv  health_metrics_2026_05.csv  health_metrics_2026_06.csv  health_metrics_all.csv  health_metrics_monthly.csv  health_metrics_weekly.csv
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
docs/ideas/: initial-requirements.md
issue/: 20260627-fix-uv-run-cli.md  20260627-xml-too-large.md
output-demo/: apple_watch_health_monthly_report_2026_03.html  apple_watch_health_monthly_report_2026_04.html  apple_watch_health_monthly_report_2026_05.html  apple_watch_health_monthly_report_2026_06.html
src/: health_monthly_report.py  test_example.py
src/cli/: aggregate_monthly_metrics.py  aggregate_weekly_metrics.py  health_monthly_report.py  health_trend_report.py  health_weekly_report.py  html_to_pdf.py  merge_metrics.py
src/google-cloud-run-function-inline/: README.md  html_utils.py  main.py
src/health_report/: __init__.py  preprocess.py  report.py  trend.py  weekly.py
src/streamlit_app/: app.py
tests/: test_cli.py  test_health_monthly_report.py  test_html.py  test_html_to_pdf.py  test_preprocess.py  test_report_csv.py  test_trend.py  test_weekly.py
(+36 files in other folders)
